adding new data

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ControlBuddy</title>
+    <title>TestBuddy</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
   </head>
   <body>
     {%if not isLogin%}
     <nav class="navbar" role="navigation" aria-label="dropdown navigation">
         <a class="navbar-item" href="/">
-            <img src="{{url_for('static',filename='logoo.png')}}"
+            <img src="{{url_for('static',filename='hp logo.png')}}"
               alt="Bulma: Free, open source, and modern CSS framework based on Flexbox"
-              width="112" height="28">
+              width="50" height="28">
           </a>
+          <!--
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
             Settings
@@ -35,6 +36,7 @@
             </div>
           </div>
         </div>
+        -->
         <div class="navbar-end">
             <div class="navbar-item">
               <div class="buttons">
@@ -53,10 +55,10 @@
   <section class="section">
     <div class="container">
       <h1 class="title">
-        ControlBuddy
+        TestBuddy
       </h1>
       <p class="subtitle">
-       You Personal <strong>AI</strong> Control Writer!
+       Your Personal <strong>AI</strong> Test Writer!
       </p>
     </div>
   </section>
