--- a/templates/applicationv2.html
+++ b/templates/applicationv2.html
@@ -1,5 +1,20 @@
 {% extends "index.html" %}
 {% block content %}
+<style>
+  #myProgress {
+    width: 100%;
+    background-color: #ddd;
+  }
+  
+  #myBar {
+    width: 0%;
+    height: 30px;
+    background-color: #04AA6D;
+    text-align: center;
+    line-height: 30px;
+    color: white;
+  }
+  </style>
 <div class="columns">
     <div class="column">
         <form action="/application/" method="POST">
@@ -69,9 +84,12 @@
           </div>
           <div class="buttons">
                 
-            <button class="button is-success" type="submit" style="color: black;"><img width="20" height="20" src="https://img.icons8.com/ios/50/sent--v1.png" alt="sent--v1" /> Submit</button>
+            <button class="button is-success" type="submit" onclick="move()" style="color: black;"><img width="20" height="20" src="https://img.icons8.com/ios/50/sent--v1.png" alt="sent--v1" /> Submit</button>
             <button class="button is-warning"><img width="20" height="20" src="https://img.icons8.com/pulsar-line/48/filled-trash.png" alt="filled-trash"/> Clear</button>
             
+        </div>
+        <div id="myProgress">
+          <div id="myBar">0%</div>
         </div>
         </form>
     </div>
@@ -119,6 +137,26 @@
       </table>
 </div>
 
-
+<script>
+  var i = 0;
+  function move() {
+    if (i == 0) {
+      i = 1;
+      var elem = document.getElementById("myBar");
+      var width = 0;
+      var id = setInterval(frame, 10);
+      function frame() {
+        if (width >= 99) {
+          clearInterval(id);
+          i = 0;
+        } else {
+          width++;
+          elem.style.width = width + "%";
+          elem.innerHTML = width  + "%";
+        }
+      }
+    }
+  }
+  </script>
 
 {% endblock %}
