--- a/templates/applicationv1.html
+++ b/templates/applicationv1.html
@@ -17,43 +17,21 @@
     <div class="column">
         <div class="field">
             <label class="label">Delivery Team</label>
-            <div class="select">
-              <select>
-                <option>Select dropdown</option>
-                <option>Revenue</option>
-                <option>IT</option>
-                <option>Accounting</option>
-              </select>
+            <div class="control">
+              <input class="input" type="text" placeholder="e.g Alex Smith">
             </div>
           </div>
           
           <div class="field">
             <label class="label">Type</label>
             <div class="control">
-              <div class="select">
-              <select>
-                <option>Testing</option> 
-                <option>E2E Testing</option> 
-                <option>Performance Testing</option> 
-                <option>Data Migration Testing</option> 
-                <option>Other</option> 
-                
-                
-              </select>
-              </div>
+              <input class="input" type="text" placeholder="e.g. alexsmith@gmail.com">
             </div>
           </div>
           <div class="field">
             <label class="label">Priority</label>
             <div class="control">
-              <div class="select">
-              <select>
-                <option>Medium</option>
-                <option>High</option>
-                <option>Low</option>
-                
-              </select>
-              </div>
+              <input class="input" type="text" placeholder="e.g. alexsmith@gmail.com">
             </div>
           </div>
           <div class="field">
@@ -105,7 +83,6 @@
         </tbody>
       </table>
 </div>
-
 
 
 {% endblock %}
